# Headquarter

./: .gitignore  CMakeLists.txt  README.md  bootstrap.py
code/client/: CMakeLists.txt  agent.c  api.c  auth.c  auth.h  build_client.c  chat.c  client.c  client.h  command.c  command.h  data.c  dialog.c  effect.c  filesrv.c  friend.c  game.c  game.h  guild.c  hero.c  instance.c  instance.h  item.c  kstr.c  kstr.h  main.c  merchant.h  network.c  network.h  opcodes.h  packets.c  packets.info  party.c  player.c  player.h  quest.c  skill.c  title.c  trade.c  world.c  (+1 more)
code/client/data/: area_info.data
code/common/: CMakeLists.txt  array.h  log.c  log.h  macro.h  paths.h  thread.h  uuid.h
code/common/linux/: thread.c  time.c
code/common/win32/: thread.c
code/portal/: CMakeLists.txt  login.c  ssl.c  stream.c
code/webgate/: CMakeLists.txt  login.c
data/: gw_37957.pub.txt  gw_38033.pub.txt  gw_38153.pub.txt  gw_38222.pub.txt  gw_38367.pub.txt  gw_38519.pub.txt  gw_38688.pub.txt  gw_38706.pub.txt  gw_38734.pub.txt
include/client/: Headquarter.h  event.h
tools/: download.py  dump_key.py  dump_map_infos.py  dump_server_packets.py  packet.py  packet_ex.py  print_gw_exe_file_id.py  process.py  scanner.py  update_binary.py  update_opcode.py
